--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -11,19 +13,12 @@
 
 body {
   margin: 0;
-  font-family: 'Inter', 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Heebo', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 span {
   color: #4FFFB0;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
 
 ul {
@@ -55,24 +50,6 @@ h2 {
   position: relative;
 }
 
-button {
-  font-family: 'Inter', sans-serif;
-  padding: .7rem 1.5rem;
-  margin: 1rem 0;
-  background-color: #4FFFB0;
-  border: 2.5px solid #4FFFB0;
-  color: #f8f8f8;
-  font-size: 1rem;
-  font-weight: 500;
-  display: flex;
-  border-radius: 34px;
-}
-
-button:hover {
-  background: none;
-  color: rgb(79, 255, 176);
-}
-
 .hero {
   width: 100%;
   height: 100vh;
@@ -96,6 +73,8 @@ button:hover {
 
 .hero h1 {
     color: #f8f8f8;
+    font-size: 3.5rem;
+    font-weight: 900;
 }
 
 .hero .blue {
@@ -177,19 +156,80 @@ button:hover {
 
 .generator .container {
   word-wrap: break-word;
-  margin-right: 10rem;
+  margin-right: 7.5rem;
 }
 
 .generator .content {
   display: flex;
   flex-direction: column;
+  align-items: left;
   justify-content: center;
   position: relative;
+  top: 25%;
   left: 55%;
-  top: 30%;
   width: 45%;
 }
 
+.generator h1 {
+  font-size: 4.5rem;
+  font-weight: 900;
+  color: #0F054C;
+}
+
+button {
+  display: inline-block;
+  font-family: 'Inter', sans-serif;
+  padding: .7rem 1.5rem;
+  margin: 1rem 0;
+  background-color: #4FFFB0;
+  border: 2.5px solid #4FFFB0;
+  color: #0F054C;
+  font-size: 1rem;
+  width: fit-content;
+  font-weight: 500;
+  border-radius: 34px;
+}
+
+button:hover {
+  background: none;
+  color: rgb(79, 255, 176);
+}
+
+.generator .button {
+  display: inline-block;
+  font-family: 'Inter', sans-serif;
+  padding: .7rem 1.5rem;
+  margin: 1rem 0;
+  font-size: 1rem;
+  width: fit-content;
+  font-weight: 500;
+  border-radius: 34px;
+  background: rgb(79,255,176);
+  background: linear-gradient(147deg, rgba(79,255,176,1) 0%, rgba(9,9,121,1) 47%, rgba(79,255,176,1) 100%);
+  color: white;
+  border: none;
+}
+
+.generator .button:hover {
+  background: rgb(123, 255, 195);
+  background: linear-gradient(147deg, rgb(123, 255, 195) 0%, rgb(56, 56, 151) 47%, rgb(123, 255, 195) 100%);
+}
+
+.two-button {
+  width: 27rem;
+  display: inline-flex;
+  justify-content: space-around;
+  padding: 3%;
+}
+
+a.button {
+  -webkit-appearance: button;
+  -moz-appearance: button;
+  appearance: button;
+
+  text-decoration: none;
+  color: initial;
+}
 
 .info {
   width: 100%;
@@ -308,7 +348,7 @@ button:hover {
 .footer form input:focus {
   color: #333;
   outline: #4FFFB0;
-  box-shadow: 0 0 8px 0 #0d2154;
+  box-shadow: 0 0 8px 0 #0F054C;
 }
 
 .footer form .social-group{
