--- a/styles/globals.css
+++ b/styles/globals.css
@@ -184,7 +184,7 @@ h2 {
   margin-top: 1.25rem;
 }
 
-button {
+.hero .button {
   display: inline-block;
   font-family: 'Inter', sans-serif;
   padding: .7rem 1.5rem;
@@ -198,10 +198,25 @@ button {
   border-radius: 22px;
 }
 
-button:hover {
+.info .button {
+  display: inline-block;
+  font-family: 'Inter', sans-serif;
+  padding: .7rem 1.5rem;
+  margin: 1rem 0;
+  background-color: #4FFFB0;
+  border: 2.5px solid #4FFFB0;
+  color: #0F054C;
+  font-size: 1.4rem;
+  width: fit-content;
+  font-weight: 500;
+  border-radius: 22px;
+}
+
+.button:hover {
   background: none;
   color: rgb(79, 255, 176);
 }
+
 
 .generator .button {
   display: inline-block;
@@ -233,7 +248,7 @@ button:hover {
   color: #0F054C;
   border-radius: 12px;
   font-size: 1.4rem;
-  background: rgba(123, 255, 195, .35);
+  background: rgba(123, 255, 195, .15);
 }
 
 .generator input::placeholder {
@@ -242,11 +257,11 @@ button:hover {
 }
 
 .generator input:hover {
-  background: rgba(134, 255, 201, .25);
+  background: rgba(134, 255, 201, .35);
 }
 
 .generator input:focus {
-  background: rgba(134, 255, 201, .25);
+  background: rgba(134, 255, 201, .15);
   outline: none !important;
   caret-color: #4FFFB0;
 }
@@ -256,16 +271,17 @@ button:hover {
 }
 
 
-.hero .hollow {
-  background: none;
-  color: #4FFFB0;
+.hollow {
+  background: none !important;
+  color: #4FFFB0 !important;
 }
 
 .two-button {
-  max-width: 16rem;
+  width: 17rem;
   justify-content: space-between;
   display: inline-flex;
   padding: 0;
+  margin-left: 0;
 }
 
 .generator .two-button {
@@ -277,6 +293,11 @@ button:hover {
 .float-left {
   margin-left: 0 !important;
   float: left;
+}
+
+.success {
+  justify-content: space-between !important;
+  max-width: 31rem !important;
 }
 
 a.button {
@@ -292,15 +313,41 @@ a.button {
   width: 100%;
   height: 100vh;
   position: relative;
-  /*
-  background: rgba(0, 0, 0, .3);
-  */
+}
+
+.info h1 {
+  font-size: 4.5rem;
+  font-weight: 900;
+  color: #4FFFB0;;
+}
+
+.info h2 {
+  font-size: 2.5rem;
+  font-weight: 600;
+  color: white;
+}
+
+.info h2 {
+  font-size: 2.5rem;
+  font-weight: 600;
+  color: #4FFFB0;
+}
+
+.info h3 {
+  font-size: 1.25rem;
+  font-weight: 400;
+  color: white;
+}
+
+.info .text-link {
+  color: #4FFFB0;
+  text-decoration: underline;
 }
 
 .info:before {
   content: '';
   position: absolute;
-  background: url('../pages/assets/recovery-bg.png') no-repeat center center/cover;
+  background: url('../pages/assets/setup-bg.png') no-repeat center center/cover;
   height: 100%;
   width: 100%;
   z-index: -1;
@@ -309,10 +356,11 @@ a.button {
 .info .content {
   position: absolute;
   left: 0;
-  top: 30%;
+  top: 25%;
   width: 50%;
   padding: 1rem;
 }
+
 
 .info h2 {
   color: #f8f8f8;
@@ -440,6 +488,19 @@ a.button {
 @media screen and (max-width: 1022px) {
   .generator h1 {
     font-size: 3.0rem;
+  }
+
+  .generator .content {
+    top: 30%;
+    left: 65%;
+  }
+
+  .generator .button {
+    font-size: 1rem;
+  }
+
+  .generator .two-button {
+    max-width: 22rem !important;
   }
 }
 
