--- a/styles/globals.css
+++ b/styles/globals.css
@@ -126,10 +126,17 @@ h2 {
 }
 
 .navbar li {
-  padding: 1rem;
+  text-align: center;
+  height: fit-content;
+  width: 6rem;
   font-size: 1.4rem;
   font-weight: 600;
   color: #fff;
+  border-radius: 22px;
+}
+
+.navbar li:hover {
+  background-color: #0F054C;
 }
 
 .navbar .icon {
