--- a/styles/globals.css
+++ b/styles/globals.css
@@ -52,7 +52,7 @@ h2 {
 .hero {
   width: 100%;
   height: 100vh;
-  background: url('../public/minthero-bg.png') no-repeat center center/cover;
+  background: url("/minthero-bg.png") no-repeat center center/cover;
   background-size: cover;
 }
 
