--- a/styles/globals.css
+++ b/styles/globals.css
@@ -76,8 +76,10 @@ h2 {
     font-weight: 900;
 }
 
-.hero .blue {
+.hero .minty {
     color: #4FFFB0;
+    font-size: 3.5rem;
+    font-weight: 900;
 }
 
 .navbar {
